tests/negative/neg_pr113_variant_range_choice.safe
package Neg_PR113_Variant_Range_Choice is
   type Packet (Count : Integer = 0) is
      record
         case Count is
            when 0 to 3 then
               Value : Integer;
         end case;
      end record;
end Neg_PR113_Variant_Range_Choice;
